# EmojiManagement

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: category.rs  clipboard.rs  meme.rs  mod.rs
src-tauri/src/db/: mod.rs  queries.rs
src-tauri/src/models/: meme_model.rs  mod.rs
src-tauri/src/utils/: file_utils.rs  hash_utils.rs  image_utils.rs  mod.rs
src/components/: MemeCard.vue  SettingsDialog.vue  SideBar.vue  TopBar.vue
src/stores/: dragStore.ts  settingStore.ts
src/views/: MainView.vue
