[package]
name = "emojimanagement"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "emojimanagement_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "image-ico", "image-png", "tray-icon"] }
tauri-plugin-opener = "2"
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_UI_WindowsAndMessaging"
] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
md5 = "0.8.0"
uuid = { version = "1", features = ["v4"] }
infer = "0.19.0"
image = "0.25.10"
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2.0.0"
tauri-plugin-log = "2.0.0"
log = "0.4"

